--- a/RecipeForum_frontend/RecipeForum_frontend/wwwroot/css/app.css
+++ b/RecipeForum_frontend/RecipeForum_frontend/wwwroot/css/app.css
@@ -76,3 +76,11 @@ code {
     color: #c02d76;
 }
 
+.appbar-blurred {
+    background-color: rgba(255, 255, 255, 0.85) !important;
+    backdrop-filter: blur(8px)
+}
+
+.nav-text {
+    color: black;
+}
