--- a/RecipeForum_frontend/RecipeForum_frontend/Pages/Login.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Pages/Login.razor
@@ -1,19 +1,12 @@
 ﻿@page "/Account"
 @using Dialogs
-
+@inject NavigationManager NavigationManager
 @inject IUserService userService
 
 <MudGrid>
     <MudItem>
-        @if (!IsUserLoggedIn)
-        {
-            <MudText>You are not logged in.</MudText>
-            <MudButton OnClick="@OnLogin">Login</MudButton>
-        }
-        else
-        {
-            <MudText>Account details</MudText>
-        }
+        <MudText>You are not logged in.</MudText>
+        <MudButton OnClick="@OnLogin">Login</MudButton>
     </MudItem>
 </MudGrid>
 
@@ -23,6 +16,10 @@
     protected override async Task OnInitializedAsync()
     {
         IsUserLoggedIn = await userService.IsUserLoggedIn();
+        if (!IsUserLoggedIn)
+        {
+            NavigationManager.NavigateTo("http://localhost:8080/login");
+        }
     }
 
     private async Task OnLogin()
