redirecting user to the server's login page

--- a/RecipeForum_frontend/RecipeForum_frontend/Pages/Login.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Pages/Login.razor
@@ -18,7 +18,7 @@
         IsUserLoggedIn = await userService.IsUserLoggedIn();
         if (!IsUserLoggedIn)
         {
-            NavigationManager.NavigateTo("http://localhost:8080/login");
+            await OnLogin();
         }
     }
 
