Changed dialog looks

--- a/RecipeForum_frontend/RecipeForum_frontend/Dialogs/AddRecipeDialog.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Dialogs/AddRecipeDialog.razor
@@ -3,41 +3,41 @@
         <MudForm @ref="form" Model="Recipe">
             <MudGrid>
                 <MudItem xs="12">
-                    <MudTextField @bind-Value="Recipe.Name" Label="Dish Name" Required="true" />
+                    <MudTextField Variant="Variant.Outlined" @bind-Value="Recipe.Name" Label="Dish Name" Required="true" />
+                </MudItem>
+
+                <MudItem xs="12" sm="4">
+                    <MudNumericField Variant="Variant.Outlined" @bind-Value="Recipe.CookTime" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Timer" Label="Cook Time" Required="true" />
+                </MudItem>
+
+                <MudItem xs="12" sm="4">
+                    <MudNumericField Variant="Variant.Outlined" @bind-Value="Recipe.PrepTime" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Timer" Label="Preparation Time" Required="true" />
+                </MudItem>
+
+                <MudItem xs="12" sm="4">
+                    <MudNumericField Variant="Variant.Outlined" @bind-Value="Recipe.Portion" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.SupervisorAccount" Label="Portions" Required="true" />
                 </MudItem>
 
                 <MudItem xs="12">
-                    <MudNumericField @bind-Value="Recipe.CookTime" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.LockClock" Label="Cook Time" Required="true" />
+                    <MudTextField Variant="Variant.Outlined" @bind-Value="Recipe.Description" Label="Description" Lines="5"/>
                 </MudItem>
 
-                <MudItem xs="12">
-                    <MudNumericField @bind-Value="Recipe.PrepTime" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.LockClock" Label="Preparation Time" Required="true" />
-                </MudItem>
-
-                <MudItem xs="12">
-                    <MudNumericField @bind-Value="Recipe.Portion" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.SupervisorAccount" Label="Portions" Required="true" />
-                </MudItem>
-
-                <MudItem xs="12">
-                    <MudTextField @bind-Value="Recipe.Description" Label="Description" />
-                </MudItem>
-
-                <MudItem xs="12">
+                <MudItem xs="12" Class="d-flex gap-2 flex-column">
                     <MudText Typo="Typo.caption">Preparation Steps</MudText>
                     @for (int i = 0; i < PreparationSteps.Count; i++)
                     {
                         <MudTextField Adornment="Adornment.Start" AdornmentText="@($"{i + 1}.")" Value="PreparationSteps[i]" ValueChanged="@((string value) => OnStepChanged(value, i))"/>
                     }
-                    <MudButton OnClick="@(AddToSteps)" ButtonType="ButtonType.Button">Add Step</MudButton>
+                    <MudButton Variant="Variant.Outlined" OnClick="@(AddToSteps)" ButtonType="ButtonType.Button">Add Step</MudButton>
                 </MudItem>
             </MudGrid>
         </MudForm>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="@Close">
+        <MudButton Variant="Variant.Outlined" Color="Color.Error" OnClick="@Close">
             Close
         </MudButton>
-        <MudButton OnClick="@Save">
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@Save">
             Save
         </MudButton>
     </DialogActions>
