--- a/RecipeForum_frontend/RecipeForum_frontend/Layout/MainBody.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Layout/MainBody.razor
@@ -2,66 +2,17 @@
 ﻿
 <MudAppBar Elevation="25" Fixed="true" class="appbar-blurred">
     <MudToolBar Gutters="true" Style="width: 100%;">
-        <MudButton Href="/" StartIcon="@Icons.Material.Outlined.DinnerDining">
-            <MudHidden Breakpoint="Breakpoint.SmAndDown">ReceptMegosztó</MudHidden>
-        </MudButton>
-
-        <MudHidden Breakpoint="Breakpoint.SmAndDown">
-            <MudSpacer />
-            @NavMenu.PrimaryLinks
-        </MudHidden>
-
-        <MudSpacer />
-
-        @*A kereső innen indul*@
-        <MudHidden Breakpoint="Breakpoint.Xs">
-            <MudTextField @bind-Value="Search" Label="Search" Variant="Variant.Outlined" Adornment="Adornment.End"
-                          AdornmentIcon="@Icons.Material.Filled.Search" AdornmentColor="Color.Dark"
-                          Class="flex-shrink-1" Style="min-width: 150px; max-width: 300px; width: 30vw;" />
-        </MudHidden>
-
-        <MudHidden Breakpoint="Breakpoint.SmAndUp">
-            @if (_showMobileSearch)
-            {
-                <MudTextField @bind-Value="Search" Placeholder="Keresés..." Variant="Variant.Outlined" FullWidth="true"
-                              Class="mx-2" Style="width: 100%;" />
-
-                <MudIconButton Icon="@Icons.Material.Filled.Close" Edge="Edge.End" OnClick="ToggleMobileSearch" />
-            }
-            else
-            {
-                <MudIconButton Icon="@Icons.Material.Filled.Search" Edge="Edge.End" OnClick="ToggleMobileSearch" />
-            }
-        </MudHidden>
-        @*A kereső idáig tart*@
-
-        <MudHidden Breakpoint="Breakpoint.SmAndDown">
-            <MudMenu AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
-                <ActivatorContent>
-                    <MudAvatar>
-                        <MudImage Icon="@Icons.Material.Filled.AccountCircle" />
-                    </MudAvatar>
-                </ActivatorContent>
-                <ChildContent>
-                    @NavMenu.SecondaryLinks
-                </ChildContent>
-            </MudMenu>
-        </MudHidden>
-
-        <MudHidden Breakpoint="Breakpoint.MdAndUp">
-            <MudIconButton Icon="@Icons.Material.Filled.Menu" Edge="Edge.End" OnClick="@ToggleDrawer" />
-        </MudHidden>
+        <NavMenu OnToggleDrawer="ToggleDrawer" />
     </MudToolBar>
 </MudAppBar>
 
 <MudDrawer @bind-Open="_drawerOpen" Elevation="2" Anchor="Anchor.Right" ClipMode="DrawerClipMode.Always" Class="d-md-none">
-    <NavMenu>
-        <MudNavMenu Class="nav-text flex-column pa-4">
-            @NavMenu.PrimaryLinks
-            <MudDivider Class="my-2" />
-            @NavMenu.SecondaryLinks
-        </MudNavMenu>
-    </NavMenu>
+    <MudNavMenu Class="nav-text flex-column pa-4">
+        <MudNavLink Href="/" Icon="@Icons.Material.Filled.Home" Match="NavLinkMatch.All">Home</MudNavLink>
+        <MudNavLink Href="/Categories" Icon="@Icons.Material.Filled.Interests">Categories</MudNavLink>
+        <MudDivider Class="my-2" />
+        <AccountNavMenu />
+    </MudNavMenu>
 </MudDrawer>
 
 <MudMainContent Class="@(_drawerOpen ? "ml-drawer" : "")">
@@ -74,7 +25,6 @@
     [Parameter]
     public RenderFragment ChildContent { get; set; }
 
-    public string Search { get; set; }
     private bool _drawerOpen;
 
     private void ToggleDrawer()
@@ -82,10 +32,4 @@
         _drawerOpen = !_drawerOpen;
     }
 
-    private bool _showMobileSearch = false;
-
-    private void ToggleMobileSearch()
-    {
-        _showMobileSearch = !_showMobileSearch;
-    }
 }
